# grabmyfiles

./: .gitignore
.github/workflows/: ui-ci.yml
server/: CMakeLists.txt  a.txt
server/include/server/: app.hpp
server/include/server/httplib/: httplib.hpp
server/include/server/service/: fileController.hpp  fileSharer.hpp
server/include/server/utils/: uploadUtils.hpp
server/src/: app.cpp  main.cpp
server/src/services/: fileController.cpp  fileSharer.cpp
server/src/utils/: uploadUtils.cpp
ui/: next.config.js  package-lock.json
ui/src/components/: FileDownload.tsx
